lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:7: error: type mismatch;
 found   : Double
 required: lessons.lander.universe.Point
			Segment(0)=Liste(i).y
                                            ^Lander:8: error: type mismatch;
 found   : Double
 required: lessons.lander.universe.Point
			Segment(1)=Liste(i+1).y
                                              ^Lander:11: error: type mismatch;
 found   : Array[lessons.lander.universe.Point]
 required: Array[Int]
	return Segment
               ^